--- a/index.html
+++ b/index.html
@@ -4,18 +4,27 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>ツールチェック</title>
+
 <style>
 body{margin:0;background:#111;color:#fff;font-family:-apple-system}
 header{padding:8px 12px;border-bottom:1px solid #333;color:#aaa;font-size:14px}
 main{padding:16px;max-width:520px;margin:auto}
 .card{border:1px solid #333;border-radius:8px;padding:16px;margin-bottom:12px}
-button{width:100%;padding:16px;margin-top:12px;font-size:18px;
-  background:#1a1a1a;color:#fff;border:1px solid #333;border-radius:8px}
+button{
+  width:100%;padding:16px;margin-top:12px;
+  font-size:18px;border-radius:8px;
+  background:#1a1a1a;color:#fff;border:1px solid #333
+}
 .small{font-size:14px;padding:10px}
-.toast{position:fixed;top:40%;left:50%;transform:translate(-50%,-50%);
-  background:#000;border:1px solid #333;padding:20px 28px;border-radius:8px}
+.toast{
+  position:fixed;top:40%;left:50%;
+  transform:translate(-50%,-50%);
+  background:#000;border:1px solid #333;
+  padding:20px 28px;border-radius:8px;text-align:center
+}
 .hidden{display:none}
-video{width:100%;border:1px solid #333;border-radius:8px}
+video{width:100%;border-radius:8px;border:1px solid #333;background:#000}
+.pill{border:1px solid #333;border-radius:999px;padding:2px 8px;color:#aaa;font-size:14px}
 </style>
 </head>
 
@@ -24,22 +33,22 @@ video{width:100%;border:1px solid #333;border-radius:8px}
 <main id="app"></main>
 
 <script>
-/* 設定 */
+/* ===== 設定 ===== */
 const TOOL_NAME={
   T001:"手歯止め",T002:"デジタルゲージ",T003:"検測用具",
   T004:"誘導棒",D001:"その他（扉1）",D002:"その他（扉2）",D003:"その他（扉3）"
 };
 const MEMBERS=["佐藤","山田","高橋"];
 
-/* URL */
+/* ===== URL ===== */
 const p=new URLSearchParams(location.search);
 const site=p.get("site")||"千葉機械ライン";
 const tool=p.get("tool");
-const role=p.get("role"); // ← 追加
+const role=p.get("role");
 const isChecker=(role==="checker");
 const toolName=TOOL_NAME[tool]||"不明";
 
-/* 共通 */
+/* ===== 共通 ===== */
 const app=document.getElementById("app");
 const hdr=document.getElementById("hdr");
 const now=()=>new Date();
@@ -54,11 +63,11 @@ function toast(a,b="",ms=2500){
   setTimeout(()=>d.remove(),ms);
 }
 
-/* 端末名 */
+/* ===== 端末名 ===== */
 function getUser(){return localStorage.getItem("user")||"";}
 function setUser(n){localStorage.setItem("user",n);}
 
-/* ログ（端末内デモ） */
+/* ===== ログ（端末内） ===== */
 function logs(){return JSON.parse(localStorage.getItem("logs")||"[]");}
 function save(l){localStorage.setItem("logs",JSON.stringify(l));}
 function add(e){const l=logs();l.push(e);save(l);}
@@ -66,17 +75,18 @@ function last(){
   return logs().filter(x=>x.site==site&&x.tool==tool).slice(-1)[0];
 }
 
-/* 画面 */
+/* ===== 画面 ===== */
 function header(){
   hdr.textContent=
     `現場：${site}　道具：${toolName}　端末：${getUser()||"未設定"}`
-    + (isChecker?"　[確認者]":"");
+    +(isChecker?"　[確認者]":"");
 }
 
 function userSelect(){
   app.innerHTML=`
-  <div class="card"><h3>この端末の名前</h3>
-  ${MEMBERS.map(n=>`<button onclick="pick('${n}')">${n}</button>`).join("")}
+  <div class="card">
+    <h3>この端末の名前</h3>
+    ${MEMBERS.map(n=>`<button onclick="pick('${n}')">${n}</button>`).join("")}
   </div>`;
 }
 window.pick=n=>{setUser(n);render();};
@@ -92,14 +102,14 @@ function main(){
   app.innerHTML=`
   <div class="card">
     <h3>${toolName}</h3>
-    <div>${st}</div>
+    <div class="pill">${st}</div>
 
     <button onclick="take()">持ち出し</button>
     <button onclick="ret()">返却（写真）</button>
 
-    ${state=="RETURN" && isChecker
-      ? `<button class="small" onclick="approve()">承認（確認者）</button>`
-      : ``}
+    ${isChecker ? `
+      <button class="small" onclick="approve()">承認（確認者）</button>
+    ` : ``}
   </div>
 
   <div id="cam" class="card hidden">
@@ -108,12 +118,13 @@ function main(){
   </div>`;
 }
 
-/* 動作 */
+/* ===== 動作 ===== */
 window.take=()=>{
   const d=now();
   add({site,tool,toolName,type:"TAKE",user:getUser(),hm:hm(d)});
   toast("持ち出しました",hm(d));
 };
+
 let stream=null;
 window.ret=async()=>{
   const cam=document.getElementById("cam");
@@ -122,13 +133,15 @@ window.ret=async()=>{
   stream=await navigator.mediaDevices.getUserMedia({video:{facingMode:"environment"}});
   v.srcObject=stream;
 };
+
 window.shot=()=>{
-  stream.getTracks().forEach(t=>t.stop());
+  if(stream)stream.getTracks().forEach(t=>t.stop());
   const d=now();
   add({site,tool,toolName,type:"RETURN",user:getUser(),hm:hm(d)});
   toast("返却を記録","承認待ち");
   render();
 };
+
 window.approve=()=>{
   const d=now();
   add({site,tool,toolName,type:"APPROVE",user:getUser(),hm:hm(d)});
@@ -136,7 +149,7 @@ window.approve=()=>{
   render();
 };
 
-/* 起動 */
+/* ===== 起動 ===== */
 function render(){
   header();
   if(!tool)return app.innerHTML="<div class='card'>tool指定なし</div>";
