--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@ button{
 }
 .hidden{display:none}
 video{width:100%;border-radius:8px;border:1px solid #333;background:#000}
-.pill{border:1px solid #333;border-radius:999px;padding:2px 8px;color:#aaa;font-size:14px}
 </style>
 </head>
 
@@ -33,8 +32,9 @@ video{width:100%;border-radius:8px;border:1px solid #333;background:#000}
 <main id="app"></main>
 
 <script>
-/* ====== 設定 ====== */
-const GAS_URL = "https://script.google.com/macros/s/AKfycbzQH_wIyl0sfM_FHx1_qiWq5Q4dGzMkYJ4mNEp9vpqzq0dpxPWSSs8Dgc2HBx1jhp0B/exec";
+/* ===== 設定（確定） ===== */
+const GAS_URL =
+"https://script.google.com/macros/s/AKfycbzQH_wIyl0sfM_FHx1_qiWq5Q4dGzMkYJ4mNEp9vpqzq0dpxPWSSs8Dgc2HBx1jhp0B/exec";
 
 const TOOL_NAME={
   T001:"手歯止め",T002:"デジタルゲージ",T003:"検測用具",
@@ -69,15 +69,13 @@ function toast(a,b="",ms=2500){
 function getUser(){return localStorage.getItem("user")||"";}
 function setUser(n){localStorage.setItem("user",n);}
 
-/* ====== GASへ送信 ====== */
+/* ====== GAS送信 ====== */
 async function sendToSheet(type){
   const payload={
-    datetime: new Date().toISOString(),
-    site,
-    tool,
-    toolName,
-    action: type,
-    user: getUser()
+    datetime:new Date().toISOString(),
+    site,tool,toolName,
+    action:type,
+    user:getUser()
   };
   try{
     await fetch(GAS_URL,{
@@ -86,11 +84,11 @@ async function sendToSheet(type){
       body:JSON.stringify(payload)
     });
   }catch(e){
-    toast("通信エラー","スプレッドシート未記録");
+    toast("通信エラー","記録失敗");
   }
 }
 
-/* ===== 画面 ===== */
+/* ===== 表示 ===== */
 function header(){
   hdr.textContent=
     `現場：${site}　道具：${toolName}　端末：${getUser()||"未設定"}`
@@ -110,10 +108,8 @@ function main(){
   app.innerHTML=`
   <div class="card">
     <h3>${toolName}</h3>
-
     <button onclick="take()">持ち出し</button>
     <button onclick="ret()">返却（写真）</button>
-
     ${isChecker?`<button class="small" onclick="approve()">承認（確認者）</button>`:""}
   </div>
 
