--- a/index.html
+++ b/index.html
@@ -3,22 +3,26 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>ツールチェック</title>
+<title>器具員数確認</title>
 <style>
 body{margin:0;background:#111;color:#fff;font-family:-apple-system}
-header{padding:8px 12px;border-bottom:1px solid #333;color:#aaa;font-size:14px}
-main{padding:16px;max-width:520px;margin:auto}
-.card{border:1px solid #333;border-radius:10px;padding:16px;margin-bottom:12px}
-button{width:100%;padding:16px;margin-top:12px;font-size:18px;border-radius:10px;background:#1a1a1a;color:#fff;border:1px solid #333}
+header{padding:10px 12px;border-bottom:1px solid #333;color:#bbb;font-size:14px}
+main{padding:14px;max-width:560px;margin:auto}
+.card{border:1px solid #333;border-radius:12px;padding:14px;margin-bottom:12px}
+h2{margin:0 0 8px 0;font-size:18px}
+.badge{display:inline-block;border:1px solid #333;border-radius:999px;padding:2px 8px;font-size:12px;color:#bbb;margin-left:6px}
+.row{display:flex;gap:10px;flex-wrap:wrap}
+button{width:100%;padding:14px;margin-top:10px;font-size:18px;border-radius:12px;background:#1a1a1a;color:#fff;border:1px solid #333}
 .small{font-size:14px;padding:10px}
-.badge{display:inline-block;padding:4px 8px;border:1px solid #333;border-radius:999px;font-size:12px;margin-left:6px;color:#bbb}
-.list{margin-top:10px}
-.item{padding:10px;border:1px solid #333;border-radius:10px;margin-top:8px}
+.toast{position:fixed;top:40%;left:50%;transform:translate(-50%,-50%);background:#000;border:1px solid #333;padding:18px 22px;border-radius:12px;text-align:center;z-index:9999}
+.list .item{border:1px solid #333;border-radius:12px;padding:12px;margin-top:10px}
 .item b{display:block;font-size:16px}
-.item .meta{opacity:.7;font-size:13px;margin-top:4px}
-.toast{position:fixed;top:40%;left:50%;transform:translate(-50%,-50%);background:#000;border:1px solid #333;padding:18px 24px;border-radius:10px;text-align:center;z-index:9999}
-video{width:100%;border-radius:10px;border:1px solid #333;background:#000}
+.item .meta{opacity:.7;font-size:13px;margin-top:6px}
+video{width:100%;border-radius:12px;border:1px solid #333;background:#000}
 .hidden{display:none}
+.stateOut{border-color:#a33}
+.statePending{border-color:#aa3}
+.stateIn{border-color:#333}
 </style>
 </head>
 <body>
@@ -35,19 +39,15 @@ const TOOL_NAME={
 };
 const MEMBERS=["佐藤","山田","高橋"];
 
-/* ===== URL（siteを絶対優先） ===== */
+/* ===== URL ===== */
 const p=new URLSearchParams(location.search);
 const site=(p.get("site")||"").trim() || "A";
-const tool=p.get("tool");
-const role=p.get("role");
-const isChecker=(role==="checker");
+const tool=(p.get("tool")||"").trim();
 const toolName=TOOL_NAME[tool]||"不明";
 
 /* ===== 共通 ===== */
 const app=document.getElementById("app");
 const hdr=document.getElementById("hdr");
-const pad=n=>("0"+n).slice(-2);
-const hm=d=>`${pad(d.getHours())}:${pad(d.getMinutes())}`;
 
 function toast(a,b="",ms=2200){
   const d=document.createElement("div");
@@ -57,187 +57,212 @@ function toast(a,b="",ms=2200){
   setTimeout(()=>d.remove(),ms);
 }
 
+function vibrate(ms){
+  try{
+    if (navigator.vibrate) navigator.vibrate(ms);
+  }catch(_){}
+}
+
 function getUser(){return localStorage.getItem("user")||"";}
 function setUser(n){localStorage.setItem("user",n);}
 
-async function post(action){
+async function post(action, photoDataUrl){
   const payload={
     datetime:new Date().toISOString(),
     site, tool, toolName,
-    action,
-    user:getUser()
+    action, user:getUser()
   };
-  await fetch(GAS_URL,{
+  if(photoDataUrl) payload.photoDataUrl = photoDataUrl;
+
+  const r = await fetch(GAS_URL,{
     method:"POST",
     headers:{"Content-Type":"application/json"},
     body:JSON.stringify(payload)
   });
+  // 失敗時にcatchへ落とすため
+  if(!r.ok) throw new Error("http "+r.status);
+  const js = await r.json().catch(()=>({}));
+  if(js.result!=="ok") throw new Error(js.message || "gas error");
 }
 
-async function fetchStatus(){
+async function getStatus(){
   const url = `${GAS_URL}?mode=status&site=${encodeURIComponent(site)}&t=${Date.now()}`;
   const r = await fetch(url, {method:"GET"});
-  return await r.json();
+  if(!r.ok) throw new Error("http "+r.status);
+  const js = await r.json();
+  if(js.result!=="ok") throw new Error("status error");
+  return js.items || [];
 }
 
-/* ===== UI ===== */
-function header(){
-  hdr.textContent = `現場：${site}　道具：${toolName}　端末：${getUser()||"未設定"}` + (isChecker?"　[確認者]":"");
-}
+/* ===== カメラ（返却は必須） ===== */
+let stream=null;
 
-function selectUser(){
+function showUserSelect(){
   app.innerHTML=`
-  <div class="card">
-    <h3>この端末の名前 <span class="badge">最初の1回だけ</span></h3>
-    ${MEMBERS.map(n=>`<button onclick="pick('${n}')">${n}</button>`).join("")}
-  </div>`;
+    <div class="card">
+      <h2>この端末の名前<span class="badge">最初の1回だけ</span></h2>
+      ${MEMBERS.map(n=>`<button onclick="pick('${n}')">${n}</button>`).join("")}
+    </div>`;
 }
 window.pick=n=>{setUser(n);render();};
 
-let stream=null;
-let lastToastKey="";
+function header(){
+  hdr.textContent = `現場：${site}　道具：${toolName}（${tool||"未指定"}）　端末：${getUser()||"未設定"}`;
+}
 
-function workerUI(){
+function ui(statusItems){
+  const byTool = {};
+  for(const it of statusItems){
+    byTool[it.tool] = it;
+  }
+  const me = byTool[tool];
+
+  const statusText = !tool ? "" : (
+    !me ? "異常なし" :
+    me.status==="OUT" ? `${me.toolName} を持ち出し中` :
+    me.status==="PENDING" ? `${me.toolName} 返却確認待ち` :
+    "異常なし"
+  );
+
+  const needConfirm = me && me.status==="PENDING";
+  const photoUrl = (me && me.photoUrl) ? me.photoUrl : "";
+
   app.innerHTML=`
-  <div class="card">
-    <h3>${toolName}</h3>
-    <button onclick="take()">持ち出し</button>
-    <button onclick="startCamera()">返却（写真）</button>
-    <div id="cam" class="card hidden" style="margin-top:12px">
-      <video id="v" autoplay playsinline></video>
-      <button onclick="shot()">撮影</button>
+    <div class="card ${needConfirm?'statePending': (me && me.status==='OUT'?'stateOut':'stateIn')}">
+      <h2>状態</h2>
+      <div style="font-size:20px">${statusText}</div>
+      ${needConfirm ? `<div style="opacity:.8;margin-top:8px">写真を確認してから「確認」を押す</div>` : ``}
+      ${photoUrl ? `<button class="small" onclick="openPhoto('${photoUrl.replace(/'/g,"%27")}')">写真を見る</button>` : ``}
+      ${needConfirm ? `<button onclick="confirmOk()">確認</button>` : ``}
     </div>
-  </div>`;
+
+    <div class="card">
+      <h2>${toolName}</h2>
+      <button onclick="take()">持ち出し</button>
+      <button onclick="startReturn()">返却（写真必須）</button>
+
+      <div id="cam" class="card hidden" style="margin-top:12px">
+        <video id="v" autoplay playsinline></video>
+        <button onclick="shotAndSend()">撮影して返却</button>
+        <button class="small" onclick="cancelCam()">中止</button>
+      </div>
+    </div>
+
+    <div class="card">
+      <h2>現場の一覧</h2>
+      ${renderList(statusItems)}
+    </div>
+  `;
 }
 
-function checkerUI(){
-  app.innerHTML=`
-  <div class="card">
-    <h3>確認者パネル <span class="badge">自動更新</span></h3>
-    <div id="list" class="list"></div>
-    <button class="small" onclick="approve()">承認（確認者）</button>
-  </div>`;
+function renderList(items){
+  // OUT/PENDINGだけ表示（状態が無い=異常なしは全体で表示）
+  const active = items.filter(x=>x.status==="OUT"||x.status==="PENDING");
+  if(active.length===0){
+    return `<div class="item"><b>異常なし</b><div class="meta">持ち出し中／返却確認待ちはありません</div></div>`;
+  }
+  return `<div class="list">` + active.map(x=>{
+    const label = (x.status==="OUT") ? "持ち出し中" : "返却確認待ち";
+    const t = x.at ? new Date(x.at).toLocaleString() : "";
+    return `
+      <div class="item ${x.status==="OUT"?'stateOut':'statePending'}">
+        <b>${x.toolName}（${x.tool}）</b>
+        <div class="meta">${label} / ${x.by||""} / ${t}</div>
+        ${x.photoUrl ? `<button class="small" onclick="openPhoto('${x.photoUrl.replace(/'/g,"%27")}')">写真</button>` : ``}
+      </div>
+    `;
+  }).join("") + `</div>`;
 }
 
-/* ===== 動作 ===== */
+window.openPhoto=(u)=>{ window.open(u, "_blank"); };
+
 window.take=async()=>{
+  if(!tool){ toast("エラー","toolが指定されていません"); return; }
   try{
-    await post("TAKE");
-    toast("持ち出しを記録",`${toolName} / ${hm(new Date())}`);
+    await post("持ち出し");
+    vibrate(80);
+    toast("持ち出しを記録","");
+    await refresh();
   }catch(e){
-    toast("通信エラー","記録できてない");
+    toast("通信エラー","記録できていません");
   }
 };
 
-window.startCamera=async()=>{
-  // iOS対策：ユーザー操作直後に必ず開始
+window.startReturn=async()=>{
+  if(!tool){ toast("エラー","toolが指定されていません"); return; }
+  // iOS対策：ボタン操作直後にgetUserMedia
   try{
     const cam=document.getElementById("cam");
     cam.classList.remove("hidden");
     const v=document.getElementById("v");
-    stream=await navigator.mediaDevices.getUserMedia({video:{facingMode:"environment"}});
-    v.srcObject=stream;
+    stream = await navigator.mediaDevices.getUserMedia({video:{facingMode:"environment"}});
+    v.srcObject = stream;
   }catch(e){
     toast("カメラ起動できない","許可/HTTPS/設定を確認");
   }
 };
 
-window.shot=async()=>{
+window.cancelCam=()=>{
+  try{ if(stream) stream.getTracks().forEach(t=>t.stop()); }catch(_){}
+  const cam=document.getElementById("cam");
+  if(cam) cam.classList.add("hidden");
+};
+
+async function captureJpegDataUrl_(){
+  const v=document.getElementById("v");
+  if(!v) throw new Error("video not found");
+  // iOS対策：videoの描画を待つ
+  await new Promise(r=>setTimeout(r,150));
+  const c=document.createElement("canvas");
+  const w=v.videoWidth||1280, h=v.videoHeight||720;
+  c.width=w; c.height=h;
+  const ctx=c.getContext("2d");
+  ctx.drawImage(v,0,0,w,h);
+  return c.toDataURL("image/jpeg",0.85);
+}
+
+window.shotAndSend=async()=>{
   try{
-    if(stream) stream.getTracks().forEach(t=>t.stop());
-    await post("RETURN");
-    toast("返却を記録","承認待ち");
+    const dataUrl = await captureJpegDataUrl_();
+    cancelCam();
+    await post("返却", dataUrl);
+    vibrate([60,60,60]);
+    toast("返却を記録","確認待ち");
+    await refresh();
   }catch(e){
-    toast("通信エラー","記録できてない");
+    toast("通信エラー","記録できていません");
   }
 };
 
-window.approve=async()=>{
-  // 承認は「状態がPENDINGのものがある前提」で押す運用
+window.confirmOk=async()=>{
+  if(!tool){ toast("エラー","toolが指定されていません"); return; }
   try{
-    await post("APPROVE");
-    toast("承認を記録",hm(new Date()));
-    await refreshList(true);
+    await post("確認");
+    vibrate(80);
+    toast("確認を記録","");
+    await refresh();
   }catch(e){
-    toast("通信エラー","承認できてない");
+    toast("通信エラー","記録できていません");
   }
 };
 
-/* ===== 確認者：持ち出し中/承認待ち表示 ===== */
-function renderList(items){
-  const box=document.getElementById("list");
-  if(!box) return;
-
-  // OUT/PENDINGだけ見せる（INは省略）
-  const active = items.filter(x=>x.status==="OUT"||x.status==="PENDING");
-
-  if(active.length===0){
-    box.innerHTML=`<div class="item"><b>いま持ち出し中なし</b><div class="meta">現場：${site}</div></div>`;
-    return;
-  }
-
-  box.innerHTML = active.map(x=>{
-    const label = (x.status==="OUT") ? "持ち出し中" : "返却→承認待ち";
-    return `
-      <div class="item">
-        <b>${x.toolName}（${x.tool}）</b>
-        <div class="meta">${label} / ${x.by} / ${new Date(x.at).toLocaleString()}</div>
-      </div>`;
-  }).join("");
-}
-
-async function refreshList(showToast){
+async function refresh(){
   try{
-    const js=await fetchStatus();
-    if(js.result!=="ok") return;
-
-    renderList(js.items||[]);
-
-    // “確認者へのポップアップ”代替：
-    // 確認者画面が開いてる時だけ、状態変化をトーストで出す（他人の睡眠は邪魔しない）
-    if(showToast){
-      // 直近のPENDINGを見つける
-      const pending=(js.items||[]).filter(x=>x.status==="PENDING").sort((a,b)=>new Date(b.at)-new Date(a.at))[0];
-      if(pending){
-        const key=`PENDING-${pending.tool}-${pending.at}`;
-        if(key!==lastToastKey){
-          lastToastKey=key;
-          toast("返却→承認待ち",`${pending.toolName} / ${pending.by}`);
-        }
-      }
-      const out=(js.items||[]).filter(x=>x.status==="OUT").sort((a,b)=>new Date(b.at)-new Date(a.at))[0];
-      if(out){
-        const key=`OUT-${out.tool}-${out.at}`;
-        if(key!==lastToastKey){
-          lastToastKey=key;
-          toast("持ち出し",`${out.toolName} / ${out.by}`);
-        }
-      }
-    }
+    const items = await getStatus();
+    ui(items);
   }catch(e){
-    // 無表示でOK（邪魔しない）
+    // 状態取得失敗でも操作画面は出す
+    ui([]);
+    toast("通信エラー","状態を取得できません");
   }
 }
 
-/* ===== 起動 ===== */
 function render(){
   header();
-  if(!tool){
-    app.innerHTML="<div class='card'>tool指定なし</div>";
-    return;
-  }
-  if(!getUser()){
-    selectUser();
-    return;
-  }
-  if(isChecker){
-    checkerUI();
-    refreshList(true);
-    // 15秒ごとに更新（邪魔しない）
-    setInterval(()=>refreshList(true),15000);
-  }else{
-    workerUI();
-  }
+  if(!getUser()){ showUserSelect(); return; }
+  refresh();
+  // 15秒ごとに自動更新（できないなら無視される）
+  setInterval(refresh, 15000);
 }
 render();
 </script>
