--- a/index.html
+++ b/index.html
@@ -58,15 +58,13 @@ function toast(a,b="",ms=2200){
 }
 
 function vibrate(ms){
-  try{
-    if (navigator.vibrate) navigator.vibrate(ms);
-  }catch(_){}
+  try{ if (navigator.vibrate) navigator.vibrate(ms); }catch(_){}
 }
 
 function getUser(){return localStorage.getItem("user")||"";}
 function setUser(n){localStorage.setItem("user",n);}
 
-/* ===== POST（★CORS対策済み） ===== */
+/* ===== POST ===== */
 async function post(action, photoDataUrl){
   const payload={
     datetime:new Date().toISOString(),
@@ -77,7 +75,6 @@ async function post(action, photoDataUrl){
 
   const r = await fetch(GAS_URL,{
     method:"POST",
-    // ★ Content-Type を指定しない（プリフライト回避）
     body: JSON.stringify(payload)
   });
 
@@ -86,6 +83,7 @@ async function post(action, photoDataUrl){
   if(js.result!=="ok") throw new Error(js.message || "gas error");
 }
 
+/* ===== 状態取得 ===== */
 async function getStatus(){
   const url = `${GAS_URL}?mode=status&site=${encodeURIComponent(site)}&t=${Date.now()}`;
   const r = await fetch(url, {method:"GET"});
@@ -95,172 +93,31 @@ async function getStatus(){
   return js.items || [];
 }
 
-/* ===== カメラ（返却は必須） ===== */
+/* ===== カメラ（超低画質） ===== */
 let stream=null;
-
-function showUserSelect(){
-  app.innerHTML=`
-    <div class="card">
-      <h2>この端末の名前<span class="badge">最初の1回だけ</span></h2>
-      ${MEMBERS.map(n=>`<button onclick="pick('${n}')">${n}</button>`).join("")}
-    </div>`;
-}
-window.pick=n=>{setUser(n);render();};
-
-function header(){
-  hdr.textContent = `現場：${site}　道具：${toolName}（${tool||"未指定"}）　端末：${getUser()||"未設定"}`;
-}
-
-function ui(statusItems){
-  const byTool = {};
-  for(const it of statusItems){
-    byTool[it.tool] = it;
-  }
-  const me = byTool[tool];
-
-  const statusText = !tool ? "" : (
-    !me ? "異常なし" :
-    me.status==="OUT" ? `${me.toolName} を持ち出し中` :
-    me.status==="PENDING" ? `${me.toolName} 返却確認待ち` :
-    "異常なし"
-  );
-
-  const needConfirm = me && me.status==="PENDING";
-  const photoUrl = (me && me.photoUrl) ? me.photoUrl : "";
-
-  app.innerHTML=`
-    <div class="card ${needConfirm?'statePending': (me && me.status==='OUT'?'stateOut':'stateIn')}">
-      <h2>状態</h2>
-      <div style="font-size:20px">${statusText}</div>
-      ${needConfirm ? `<div style="opacity:.8;margin-top:8px">写真を確認してから「確認」を押す</div>` : ``}
-      ${photoUrl ? `<button class="small" onclick="openPhoto('${photoUrl.replace(/'/g,"%27")}')">写真を見る</button>` : ``}
-      ${needConfirm ? `<button onclick="confirmOk()">確認</button>` : ``}
-    </div>
-
-    <div class="card">
-      <h2>${toolName}</h2>
-      <button onclick="take()">持ち出し</button>
-      <button onclick="startReturn()">返却（写真必須）</button>
-
-      <div id="cam" class="card hidden" style="margin-top:12px">
-        <video id="v" autoplay playsinline></video>
-        <button onclick="shotAndSend()">撮影して返却</button>
-        <button class="small" onclick="cancelCam()">中止</button>
-      </div>
-    </div>
-
-    <div class="card">
-      <h2>現場の一覧</h2>
-      ${renderList(statusItems)}
-    </div>
-  `;
-}
-
-function renderList(items){
-  const active = items.filter(x=>x.status==="OUT"||x.status==="PENDING");
-  if(active.length===0){
-    return `<div class="item"><b>異常なし</b><div class="meta">持ち出し中／返却確認待ちはありません</div></div>`;
-  }
-  return `<div class="list">` + active.map(x=>{
-    const label = (x.status==="OUT") ? "持ち出し中" : "返却確認待ち";
-    const t = x.at ? new Date(x.at).toLocaleString() : "";
-    return `
-      <div class="item ${x.status==="OUT"?'stateOut':'statePending'}">
-        <b>${x.toolName}（${x.tool}）</b>
-        <div class="meta">${label} / ${x.by||""} / ${t}</div>
-        ${x.photoUrl ? `<button class="small" onclick="openPhoto('${x.photoUrl.replace(/'/g,"%27")}')">写真</button>` : ``}
-      </div>
-    `;
-  }).join("") + `</div>`;
-}
-
-window.openPhoto=(u)=>{ window.open(u, "_blank"); };
-
-window.take=async()=>{
-  if(!tool){ toast("エラー","toolが指定されていません"); return; }
-  try{
-    await post("持ち出し");
-    vibrate(80);
-    toast("持ち出しを記録","");
-    await refresh();
-  }catch(e){
-    toast("通信エラー","記録できていません");
-  }
-};
-
-window.startReturn=async()=>{
-  if(!tool){ toast("エラー","toolが指定されていません"); return; }
-  try{
-    const cam=document.getElementById("cam");
-    cam.classList.remove("hidden");
-    const v=document.getElementById("v");
-    stream = await navigator.mediaDevices.getUserMedia({video:{facingMode:"environment"}});
-    v.srcObject = stream;
-  }catch(e){
-    toast("カメラ起動できない","許可/HTTPS/設定を確認");
-  }
-};
-
-window.cancelCam=()=>{
-  try{ if(stream) stream.getTracks().forEach(t=>t.stop()); }catch(_){}
-  const cam=document.getElementById("cam");
-  if(cam) cam.classList.add("hidden");
-};
 
 async function captureJpegDataUrl_(){
   const v=document.getElementById("v");
   if(!v) throw new Error("video not found");
+
   await new Promise(r=>setTimeout(r,150));
+
+  const srcW = v.videoWidth;
+  const srcH = v.videoHeight;
+
+  const MAX = 640;   // ★ 長辺640px
+  let w = srcW;
+  let h = srcH;
+  if (w > h && w > MAX) { h = Math.round(h * MAX / w); w = MAX; }
+  else if (h >= w && h > MAX) { w = Math.round(w * MAX / h); h = MAX; }
+
   const c=document.createElement("canvas");
-  const w=v.videoWidth||1280, h=v.videoHeight||720;
   c.width=w; c.height=h;
   const ctx=c.getContext("2d");
   ctx.drawImage(v,0,0,w,h);
-  return c.toDataURL("image/jpeg",0.85);
+
+  return c.toDataURL("image/jpeg",0.4); // ★ 品質0.4
 }
-
-window.shotAndSend=async()=>{
-  try{
-    const dataUrl = await captureJpegDataUrl_();
-    cancelCam();
-    await post("返却", dataUrl);
-    vibrate([60,60,60]);
-    toast("返却を記録","確認待ち");
-    await refresh();
-  }catch(e){
-    toast("通信エラー","記録できていません");
-  }
-};
-
-window.confirmOk=async()=>{
-  if(!tool){ toast("エラー","toolが指定されていません"); return; }
-  try{
-    await post("確認");
-    vibrate(80);
-    toast("確認を記録","");
-    await refresh();
-  }catch(e){
-    toast("通信エラー","記録できていません");
-  }
-};
-
-async function refresh(){
-  try{
-    const items = await getStatus();
-    ui(items);
-  }catch(e){
-    ui([]);
-    toast("通信エラー","状態を取得できません");
-  }
-}
-
-function render(){
-  header();
-  if(!getUser()){ showUserSelect(); return; }
-  refresh();
-  setInterval(refresh, 15000);
-}
-render();
 </script>
 </body>
 </html>
