--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@ main{padding:14px;max-width:560px;margin:auto}
 .card{border:1px solid #333;border-radius:12px;padding:14px;margin-bottom:12px}
 h2{margin:0 0 8px 0;font-size:18px}
 .badge{display:inline-block;border:1px solid #333;border-radius:999px;padding:2px 8px;font-size:12px;color:#bbb;margin-left:6px}
-.row{display:flex;gap:10px;flex-wrap:wrap}
 button{width:100%;padding:14px;margin-top:10px;font-size:18px;border-radius:12px;background:#1a1a1a;color:#fff;border:1px solid #333}
 .small{font-size:14px;padding:10px}
 .toast{position:fixed;top:40%;left:50%;transform:translate(-50%,-50%);background:#000;border:1px solid #333;padding:18px 22px;border-radius:12px;text-align:center;z-index:9999}
@@ -56,68 +55,100 @@ function toast(a,b="",ms=2200){
   document.body.appendChild(d);
   setTimeout(()=>d.remove(),ms);
 }
-
-function vibrate(ms){
-  try{ if (navigator.vibrate) navigator.vibrate(ms); }catch(_){}
-}
+function vibrate(ms){ try{ navigator.vibrate && navigator.vibrate(ms);}catch(_){} }
 
 function getUser(){return localStorage.getItem("user")||"";}
 function setUser(n){localStorage.setItem("user",n);}
 
 /* ===== POST ===== */
 async function post(action, photoDataUrl){
-  const payload={
-    datetime:new Date().toISOString(),
-    site, tool, toolName,
-    action, user:getUser()
-  };
-  if(photoDataUrl) payload.photoDataUrl = photoDataUrl;
+  const payload={ datetime:new Date().toISOString(), site, tool, toolName, action, user:getUser() };
+  if(photoDataUrl) payload.photoDataUrl=photoDataUrl;
 
-  const r = await fetch(GAS_URL,{
-    method:"POST",
-    body: JSON.stringify(payload)
-  });
-
+  const r=await fetch(GAS_URL,{ method:"POST", body:JSON.stringify(payload) });
   if(!r.ok) throw new Error("http "+r.status);
-  const js = await r.json().catch(()=>({}));
-  if(js.result!=="ok") throw new Error(js.message || "gas error");
+  const js=await r.json();
+  if(js.result!=="ok") throw new Error(js.message||"gas error");
 }
 
-/* ===== 状態取得 ===== */
 async function getStatus(){
-  const url = `${GAS_URL}?mode=status&site=${encodeURIComponent(site)}&t=${Date.now()}`;
-  const r = await fetch(url, {method:"GET"});
-  if(!r.ok) throw new Error("http "+r.status);
-  const js = await r.json();
-  if(js.result!=="ok") throw new Error("status error");
-  return js.items || [];
+  const r=await fetch(`${GAS_URL}?mode=status&site=${encodeURIComponent(site)}&t=${Date.now()}`);
+  const js=await r.json();
+  if(js.result!=="ok") throw new Error();
+  return js.items||[];
+}
+
+/* ===== UI ===== */
+function showUserSelect(){
+  app.innerHTML=`<div class="card"><h2>この端末の名前</h2>${
+    MEMBERS.map(n=>`<button onclick="pick('${n}')">${n}</button>`).join("")
+  }</div>`;
+}
+window.pick=n=>{ setUser(n); render(); };
+
+function header(){
+  hdr.textContent=`現場：${site}　道具：${toolName}（${tool||"未指定"}）　端末：${getUser()||"未設定"}`;
+}
+
+function ui(items){
+  const me=items.find(x=>x.tool===tool);
+  const st=!me?"異常なし":me.status==="OUT"?"持ち出し中":me.status==="PENDING"?"返却確認待ち":"異常なし";
+  app.innerHTML=`
+  <div class="card"><h2>状態</h2><div>${st}</div>
+    ${me?.photoUrl?`<button class="small" onclick="open('${me.photoUrl}')">写真</button>`:""}
+    ${me?.status==="PENDING"?`<button onclick="confirmOk()">確認</button>`:""}
+  </div>
+  <div class="card">
+    <button onclick="take()">持ち出し</button>
+    <button onclick="startReturn()">返却</button>
+    <div id="cam" class="hidden">
+      <video id="v" autoplay playsinline></video>
+      <button onclick="shotAndSend()">撮影して返却</button>
+    </div>
+  </div>`;
 }
 
 /* ===== カメラ（超低画質） ===== */
 let stream=null;
-
 async function captureJpegDataUrl_(){
   const v=document.getElementById("v");
-  if(!v) throw new Error("video not found");
-
   await new Promise(r=>setTimeout(r,150));
-
-  const srcW = v.videoWidth;
-  const srcH = v.videoHeight;
-
-  const MAX = 640;   // ★ 長辺640px
-  let w = srcW;
-  let h = srcH;
-  if (w > h && w > MAX) { h = Math.round(h * MAX / w); w = MAX; }
-  else if (h >= w && h > MAX) { w = Math.round(w * MAX / h); h = MAX; }
-
+  const MAX=640;
+  let w=v.videoWidth,h=v.videoHeight;
+  if(w>h&&w>MAX){h=h*MAX/w;w=MAX;} else if(h>w&&h>MAX){w=w*MAX/h;h=MAX;}
   const c=document.createElement("canvas");
-  c.width=w; c.height=h;
-  const ctx=c.getContext("2d");
-  ctx.drawImage(v,0,0,w,h);
-
-  return c.toDataURL("image/jpeg",0.4); // ★ 品質0.4
+  c.width=w;c.height=h;
+  c.getContext("2d").drawImage(v,0,0,w,h);
+  return c.toDataURL("image/jpeg",0.4);
 }
+
+window.take=async()=>{ await post("持ち出し"); vibrate(80); refresh(); };
+window.startReturn=async()=>{
+  const cam=document.getElementById("cam");
+  cam.classList.remove("hidden");
+  const v=document.getElementById("v");
+  stream=await navigator.mediaDevices.getUserMedia({video:{facingMode:"environment"}});
+  v.srcObject=stream;
+};
+window.shotAndSend=async()=>{
+  const img=await captureJpegDataUrl_();
+  stream.getTracks().forEach(t=>t.stop());
+  await post("返却",img);
+  vibrate([60,60,60]);
+  refresh();
+};
+window.confirmOk=async()=>{ await post("確認"); refresh(); };
+
+async function refresh(){
+  const items=await getStatus();
+  ui(items);
+}
+function render(){
+  header();
+  if(!getUser()) return showUserSelect();
+  refresh();
+}
+render();
 </script>
 </body>
 </html>
